--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Shopest">
-    <title>shopest</title>
+    <title>Shopest</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
@@ -93,8 +93,8 @@
                   </div>
                 </div>
               <div class="col-8">
-                <p>Best app ever!</p>
-                <p>
+                <p class="pull-left">Best app ever!</p>
+                <p class="pull-left">
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
@@ -111,8 +111,8 @@
                   </div>
                 </div>
               <div class="col-8">
-                <p>Best app ever!</p>
-                <p>
+                <p class="pull-left">Best app ever!</p>
+                <p class="pull-left">
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
@@ -129,8 +129,8 @@
                   </div>
                 </div>
                 <div class="col-8">
-                  <p>Best app ever!</p>
-                  <p>
+                  <p class="pull-left">Best app ever!</p>
+                  <p class="pull-left">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
