--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                   </div>
                 </div>
               <div class="col-8">
-                <p class="pull-left">Best app ever!</p>
-                <p class="pull-left">
+                <p class="">Best app ever!</p>
+                <p class="">
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
@@ -111,8 +111,8 @@
                   </div>
                 </div>
               <div class="col-8">
-                <p class="pull-left">Best app ever!</p>
-                <p class="pull-left">
+                <p class="">Best app ever!</p>
+                <p class="">
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
@@ -129,8 +129,8 @@
                   </div>
                 </div>
                 <div class="col-8">
-                  <p class="pull-left">Best app ever!</p>
-                  <p class="pull-left">
+                  <p class="">Best app ever!</p>
+                  <p class="">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
