--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
         </div>
     </div>
 
-    <section class="section section-light" >
-      <div class="row">
+    <section class="section section-light thumbnail_1" >
         <img src="https://cdn.shopify.com/s/files/1/1715/6079/files/shopestapp_1024x1024.jpg?v=1522751126" alt="look" style="max-width:100%;margin: 0 auto; display: block;">
-      </div>
      </section>
     <div class="bg four">
         <div class="ptext">
